--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="public/star.svg" />
+    <link rel="icon" href="star.svg" />
     <title>novaboard</title>
   </head>
   <body>
